deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-challenge
spec:
  selector:
    matchLabels:
      app: acme-challenge
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: acme-challenge
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/acme-challenge:master
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "1000m"
