deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: acme-challenge
  annotations:
    prometheus.io/probe: "true"
spec:
  selector:
    app: acme-challenge
    env: production
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
