deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-challenge
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dd-decaf.eu
    http:
      paths:
      - path: /.well-known/acme-challenge
        backend:
          serviceName: acme-challenge
          servicePort: 80
  - host: memote.io
    http:
      paths:
      - path: /.well-known/acme-challenge
        backend:
          serviceName: acme-challenge
          servicePort: 80
